--- a/Cloud-unit-test/.project
+++ b/Cloud-unit-test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Spring-unit-test</name>
+	<name>Cloud-unit-test</name>
 	<comment></comment>
 	<projects>
 	</projects>
