--- a/Cloud-unit-test/src/main/docker/Dockerfile
+++ b/Cloud-unit-test/src/main/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
-LABEL test1
+LABEL "test"="test1"
 ADD   ./test-1.5.4.RELEASE.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","./test-1.5.4.RELEASE.jar"]
