--- a/Cloud-unit-test/src/main/docker/Dockerfile
+++ b/Cloud-unit-test/src/main/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
 LABEL "test"="test1"
+EXPOSE 28080
 ADD   ./test-1.5.4.RELEASE.jar ./app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","./app.jar"]
